[package]
name = "livesplit_sonic_spinball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = ["signature", "derive"] }
asr_emu_help = { git = "https://github.com/Jujstme/asr_emu_help", features = ["genesis"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0